--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= content_for?(:title) ? yield(:title) : t(:home_conf_antok) %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Личный кабинет члена АНТОК" %>">
     <%= stylesheet_link_tag "application", media: "all" %>
@@ -9,79 +9,26 @@
     <%= csrf_meta_tags %>
   </head>
   <body> 
-    <%# application layout styled for Bootstrap 2.3 %>
     <main role="main">
-      <div class="container">          
-      <div class="masthead">
-        <div class="site-name">
-          <h3 class="muted"><%= t :home_conf_antok %></h3>
-        </div>
-        <div class="lang_box">
-          <div class="lang1">
-            <%= link_to image_tag("ru.png", alt: ""), "#{request.path}?locale=ru", title: "Переключиться на Русский" %>
-          </div>
-          <div class="lang2">
-            <%= link_to image_tag("en.png", alt: ""), "#{request.path}?locale=en", title: "Switch to English" %>
-          </div>
-        </div>
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <ul class="nav">
-                <li><%= link_to t(:home_link_home), root_path %></li>
-                <% if user_signed_in? %>
-                  <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
-                  <li><%= link_to t(:find_antokid), antok_id_path %></li>
-                  <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
-                <% else %>
-                  <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
-                  <li><%= link_to t(:sign_up), new_user_registration_path %></li>
-                <% end %>      
-                <!--li><%= link_to t(:home_link_prog), programme_path %></li>
-                    
-                <li><%= link_to t(:home_link_conf), about_path %></li>
-                <li><%= link_to t(:home_link_hotel), hotel_path %></li>
-                <li><%= link_to t(:home_link_sp), sponsors_path %></li-->
-              </ul>
-            </div>
-          </div>
-        </div><!-- /.navbar -->
-      </div>
-
+      <div class="container">
+      <%= render 'layouts/nav2017' %>
+      <h1><%= t :home_conf_antok %></h1>
       <%= render 'layouts/messages' %>
       <%= yield %> 
-
       <footer class="footer">
-          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2017
-        <nav>
-          <ul>
-            <li>
-              <% if params[:locale]=='en' %>
-                Site made by
-              <% else %>
-                Разработка сайта
-              <% end %>
-              <a href="http://www.busation.com">Майкл Клишевич</a></li>
-          </ul>
-        </nav>
+        <hr/>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2">&copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2017</div>
+          <div class="col-md-4">
+            <% if params[:locale]=='en' %>
+              Site made by <a href="http://www.busation.com">Michael Klishevich</a>
+            <% else %>
+              Разработка сайта <a href="http://www.busation.com">Майкл Клишевич</a>
+            <% end %>
+          </div>
+        </div>
       </footer>       
       </div>
     </main>
-    <script type='text/javascript'>
-    $(document).ready(function() {
-         $('.carousel').carousel({
-             interval: 5000
-         })
-    });    
-    </script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-62015636-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </body>
 </html>
