--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,7 @@
 }
 
 .invite_wrapper {
+  margin-top: 20px;
   text-align: center;
   .invite_to_conf {
     h2 {
@@ -33,8 +34,44 @@
   }
 }
 
+textarea.form-control {
+  height: 200px;
+}
+
 .footer {
   margin: 40px;
+}
+
+.alert-notice {
+  color: #31708f;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
+
+.alert-error {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
+.help-inline {
+  color: red;
+}
+
+.checkbox {
+  padding-left: 20px;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.form_checkbox {
+  .form-group {
+    overflow: hidden;
+    label {
+      float: left;
+      margin-right: 6px;
+    }
+  }
 }
 
 // body {
