--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -1,54 +1,49 @@
 <div class="row">
-  <div class="span12 applic-form">
-    <%= form_for(@applic) do |f| %>
+  <div class="col-md-6 applic-form">
+    <%= simple_form_for(@applic) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <h3><%= t(:personal_info) %></h3>
-      <%= f.label :fio %><%= f.text_field :fio %>
-      <%= f.label :email %><%= f.text_field :email %>
-      <%= f.label :phones %><%= f.text_field :phones %>          
-      <%= f.label :phone_work %><%= f.text_field :phone_work %>   
-      <%= f.label :phone_home %><%= f.text_field :phone_home %>   
-      <h3><%= t(:education) %></h3>    
-      <%= f.label :uch_stepen %><%= f.select :uch_stepen, 
-          options_for_select([[t(:choose_value),""], [t(:st_doctor),"Доктор наук"], [t(:st_kandidat), "Кандидат наук"], [t(:st_magister), "Магистр"], [t(:st_special),"Специалист"], [t(:st_bachelor),"Бакалавр"],
-            [t(:st_student),"Студент"]], :selected=> @applic.uch_stepen) %>
-      <h3><%= t(:work) %></h3>      
-      <%= f.label :work_company %><%= f.text_field :work_company %>
-      <%= f.label :work_position %><%= f.text_field :work_position %>
+      <%= f.input :fio, :input_html => { :class => 'form-control' } %>
+      <%= f.input :email, :input_html => { :class => 'form-control' } %>
+      <%= f.input :phones, :input_html => { :class => 'form-control' } %>
+      <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
+      <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
+      <h3><%= t(:education) %></h3>
+      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], [t(:st_doctor),"Доктор наук"], [t(:st_kandidat), "Кандидат наук"], [t(:st_magister), "Магистр"], [t(:st_special),"Специалист"], [t(:st_bachelor),"Бакалавр"], [t(:st_student),"Студент"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <h3><%= t(:work) %></h3>
+      <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
+      <%= f.input :work_position, :input_html => { :class => 'form-control' } %>
       <% if params[:locale]!='en' %>
         <h3><%= t(:additional_info) %></h3>
-        <%= f.label :antok_city %><%= f.select :antok_city, 
-          options_for_select([[t(:choose_value),""], [t(:moscow),"Москва"], [t(:voronezh), "Воронеж"],
-            [t(:ekaterinburg), "Екатеринбург"], [t(:novosibirsk),"Новосибирск"], [t(:krasnoyarsk),"Красноярск"],
-            [t(:far_east),"Дальний Восток"]], :selected=> @applic.antok_city) %>
+        <%= f.input :antok_city, collection: [[t(:choose_value),""], [t(:moscow),"Москва"], [t(:voronezh), "Воронеж"], [t(:ekaterinburg), "Екатеринбург"], [t(:novosibirsk),"Новосибирск"], [t(:krasnoyarsk),"Красноярск"], [t(:far_east),"Дальний Восток"]], selected: @applic.antok_city, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <% end %>
       <h3><%= t(:applicaion_info) %></h3>
-      <%= f.label :science_interests %><%= f.text_area :science_interests, rows: 5 %>
-      <%= f.label :conf_topic %><%= f.text_field :conf_topic %>
-      <%= f.label :conf_section %><%= f.select :conf_section, 
-          options_for_select([[t(:choose_value),""],[t(:physics_maths),"Физика, математика"], [t(:it_nanothechnologies), "Информационные (IT) и нанотехнологии"], [t(:power_electrical_engineering),"Энергетика, электротехника, машиностроение, механика"], [t(:chemistry_new_materials), "Химия, новые материалы и технологии их обработки"], [t(:biotechnology_biology), "Биотехнологии, биология, технологии живых систем, океанография"], [t(:geology_natural_resources), "Геология, природные ресурсы"], [t(:social_sciences), "Общественные науки"], [t(:aviation_space), "Авиационные и космические технологии"]], :selected=> @applic.conf_section) %>
-      <%= f.label :conf_coauthors %><%= f.text_field :conf_coauthors %>
-      <%= f.label :participation_type %><%= f.select :participation_type, 
-          options_for_select([[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], :selected=> @applic.participation_type) %>
+      <%= f.input :science_interests, as: :text, :input_html => { :class => 'form-control' } %>
+      <%= f.input :conf_topic, as: :text, :input_html => { :class => 'form-control' } %>
+      <%= f.input :conf_section, collection: [[t(:choose_value),""],[t(:physics_maths),"Физика, математика"], [t(:it_nanothechnologies), "Информационные (IT) и нанотехнологии"], [t(:power_electrical_engineering),"Энергетика, электротехника, машиностроение, механика"], [t(:chemistry_new_materials), "Химия, новые материалы и технологии их обработки"], [t(:biotechnology_biology), "Биотехнологии, биология, технологии живых систем, океанография"], [t(:geology_natural_resources), "Геология, природные ресурсы"], [t(:social_sciences), "Общественные науки"], [t(:aviation_space), "Авиационные и космические технологии"]], selected: @applic.conf_section, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :conf_coauthors, as: :text, :input_html => { :class => 'form-control' } %>
+      <%= f.input :participation_type, collection: [[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], selected: @applic.participation_type, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <% if current_user.is_antok_member %>
         <h3><%= t(:compensation_info) %></h3>
-        <%= f.label :need_compensation %> <%= f.check_box :need_compensation %>
+        <div class="form_checkbox">
+          <%= f.input :need_compensation, :as => :boolean %>
+        </div>
         <br/>
         <br/>
         <div id="compensation_info_block">
           <div class="alert alert-info">
             <%= t(:step2_compensation_info) %>
           </div>
-          <%= f.label :inn %> <%= f.text_field :inn %>
-          <%= f.label :snils %> <%= f.text_field :snils %>
-          <%= f.label :registration %> <%= f.text_field :registration %>
+          <%= f.input :inn, :input_html => { :class => 'form-control' } %>
+          <%= f.input :snils, :input_html => { :class => 'form-control' } %>
+          <%= f.input :registration, :input_html => { :class => 'form-control' } %>
         </div>
       <% end %>  
        <div class="alert alert-info">
            <%= t(:step2_warning) %>
        </div>
-      <%= f.submit t(:save), class: "btn btn-large btn-primary", id: "Save" %>
-      <%= link_to t(:cancel), root_path, class: "btn btn-large btn-secondary" %>
+      <%= f.submit t(:save), class: "btn btn-lg btn-primary", id: "Save" %>
+      <%= link_to t(:cancel), root_path, class: "btn btn-lg btn-default" %>
     <% end %>
   </div>
 </div>
