--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,42 @@
 <h2><%= t(:edit_account) %></h2>
-<%= link_to t(:home_link), :back, :class => 'btn btn-large' %>
+<%= link_to t(:home_link), :back, :class => 'btn btn-lg btn-default' %>
 <br/>
 <br/>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <% if params[:locale]=='en' %>
-    <%= f.input :is_foreign, :as => :boolean %>
-  <% end %>
-  <% if params[:locale]!='en' %>  
-    <%= f.input :is_antok_member, :as => :boolean %>
-    <%= f.input :antok_id%>  
-  <% end %>
-  <%= f.input :email, :required => true %>
-  <% if params[:locale]!='en' %>
-    <div class="alert alert-info" style="width:470px;">
-      Поля "Пароль" и "Подтверждение пароля" заполняются, только если вы хотите изменить текущий пароль
-    </div>
-  <% end %>  
-  <%= f.input :password, :autocomplete => "off", :required => false %>
-  <%= f.input :password_confirmation, :required => false %>
-  <% if params[:locale]!='en' %>
-    <div class="alert alert-info" style="width:470px;">
-      Текущий пароль заполняется обязательно, чтобы сохранить изменения
-    </div>
-  <% end %>   
-  <%= f.input :current_password, :required => true %>
-  <%= f.button :submit, t(:update), :class => 'btn btn-large btn-primary' %>
-<% end %>
-<h3><%= t(:cancel_my_account) %></h3>
-<p><%= t(:unhappy) %> <%= link_to t(:cancel_my_account), registration_path(resource_name), :data => { :confirm => "#{t(:are_you_sure)}?" }, :method => :delete %>.</p>
-<%= link_to t(:home_link), :back, :class => 'btn btn-large' %>
+<div class="row">
+  <div class="col-md-6">
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
+      <%= f.error_notification %>
+      <%= display_base_errors resource %>
+      <%= f.input :name, :autofocus => true, :input_html => { :class => 'form-control' } %>
+      <% if params[:locale]=='en' %>
+        <div class="form_checkbox">
+          <%= f.input :is_foreign, :as => :boolean %>
+        </div>
+      <% end %>
+      <% if params[:locale]!='en' %>
+        <div class="form_checkbox">
+          <%= f.input :is_antok_member, :as => :boolean %>
+        </div>
+        <%= f.input :antok_id, :input_html => { :class => 'form-control' } %>  
+      <% end %>
+      <%= f.input :email, :required => true, :input_html => { :class => 'form-control' } %>
+      <% if params[:locale]!='en' %>
+        <div class="alert alert-info">
+          Поля "Пароль" и "Подтверждение пароля" заполняются, только если вы хотите изменить текущий пароль
+        </div>
+      <% end %>  
+      <%= f.input :password, :autocomplete => "off", :required => false, :input_html => { :class => 'form-control' } %>
+      <%= f.input :password_confirmation, :required => false, :input_html => { :class => 'form-control' } %>
+      <% if params[:locale]!='en' %>
+        <div class="alert alert-info">
+          Текущий пароль заполняется обязательно, чтобы сохранить изменения
+        </div>
+      <% end %>   
+      <%= f.input :current_password, :required => true, :input_html => { :class => 'form-control' } %>
+      <%= f.button :submit, t(:update), :class => 'btn btn-large btn-primary' %>
+    <% end %>
+    <h3><%= t(:cancel_my_account) %></h3>
+    <p><%= t(:unhappy) %> <%= link_to t(:cancel_my_account), registration_path(resource_name), :data => { :confirm => "#{t(:are_you_sure)}?" }, :method => :delete %>.</p>
+    <%= link_to t(:home_link), :back, :class => 'btn btn-large' %>
+  </div>
+</div>
