--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
 <h2><%= t :sign_up_registration %></h2>
-<div class="alert alert-info">
-  <%= t :sign_up_info %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="alert alert-info">
+      <%= t :sign_up_info %>
+    </div>
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+      <%= f.error_notification %>
+      <%= display_base_errors resource %>
+      <%= f.input :name, :autofocus => true, :required => true, :input_html => { :class => 'form-control' } %>
+      <% if params[:locale]=='en' %>
+        <%= f.input :is_foreign, :as => :boolean %>
+      <% end %>
+      <% if params[:locale]!='en' %>
+        <div class="form_checkbox">
+          <%= f.input :is_antok_member, :as => :boolean %>
+        </div>   
+        <div id="antok_id_block">
+          <%= f.input :antok_id, :input_html => { :class => 'form-control' } %>
+          <div class="alert alert-info" style="width:470px;">
+            <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id" target="_blank">http://my.aksts.ru/antok_id</a></p>
+          </div>
+        </div>
+      <% end %>
+      <%= f.input :email, :required => true, :input_html => { :class => 'form-control' } %>
+      <%= f.input :password, :required => true, :input_html => { :class => 'form-control' } %>
+      <%= f.input :password_confirmation, :required => true, :input_html => { :class => 'form-control' } %>
+      <%= f.button :submit, t(:sign_up), :class => 'btn-primary' %>
+      <% if params[:locale]!='en' %>
+        <br/>
+        <br/>
+        <div class="alert alert-info">
+          <b/>Компенсация расходов предоставляется только членам АНТОК</b><br/>
+          Если нужна компенсация, то на втором шаге потребуется ИНН, СНИЛС и адрес регистрации с индексом. Пожалуйста, приготовьте информацию заранее.
+        </div>
+      <% end %>
+    <% end %>
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true, :required => true %>
-  <% if params[:locale]=='en' %>
-    <%= f.input :is_foreign, :as => :boolean %>
-  <% end %>
-  <% if params[:locale]!='en' %>
-    <%= f.input :is_antok_member, :as => :boolean %>   
-    <div id="antok_id_block">
-      <%= f.input :antok_id%>
-      <div class="alert alert-info" style="width:470px;">
-        <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id" target="_blank">http://my.aksts.ru/antok_id</a></p>
-      </div>
-    </div>
-  <% end %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, t(:sign_up), :class => 'btn-primary' %>
-  <% if params[:locale]!='en' %>
-    <br/>
-    <br/>
-    <div class="alert alert-info" style="width:470px;">
-      <b/>Компенсация расходов предоставляется только членам АНТОК</b><br/>
-      Если нужна компенсация, то на втором шаге потребуется ИНН, СНИЛС и адрес регистрации с индексом. Пожалуйста, приготовьте информацию заранее.
-    </div>
-  <% end %>
-<% end %>
-<%= render "devise/shared/links" %>
