--- a/app/views/antok_members/index.html.slim
+++ b/app/views/antok_members/index.html.slim
@@ -1,6 +1,6 @@
 h1 Поиск своего АНТОК ID
 div class="alert alert-info"
-  p Поиск производится по точному совпадению. Введите полностью ФИО. Если результат поиска пустой, то попробуйте поиск по фамилии и имени без отчества. Если вы не смогли найти свой ID, то свяжитесь с Ириной Ким - ivkimivkim@gmail.com
+  p Поиск производится по точному совпадению. Введите полностью ФИО. Если результат поиска пустой, то попробуйте поиск по фамилии и имени без отчества. Если вы не смогли найти свой ID, то свяжитесь AKSTSRussia@gmail.com
 fieldset
   = form_tag antok_id_path, :method => "get" do
     p Введите полностью ФИО
