--- a/app/views/layouts/_nav2017.html.erb
+++ b/app/views/layouts/_nav2017.html.erb
@@ -9,8 +9,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">AKSTS-2017 Sakhalin</a>
-      <%= link_to image_tag("ru.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=ru", title: "Переключиться на Русский" %>
-      <%= link_to image_tag("en.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=en", title: "Switch to English" %>
+<!--       <%= link_to image_tag("ru.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=ru", title: "Переключиться на Русский" %>
+      <%= link_to image_tag("en.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=en", title: "Switch to English" %> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
