--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -4,23 +4,26 @@
       <%= render 'shared/error_messages', object: f.object %>
       <h3><%= t(:personal_info) %></h3>
       <%= f.input :fio, :input_html => { :class => 'form-control' } %>
+      <%= f.input :fio_eng, :input_html => { :class => 'form-control' } %>
       <%= f.input :email, :input_html => { :class => 'form-control' } %>
       <%= f.input :phones, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
       <h3><%= t(:education) %></h3>
+      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Младший научный сотрудник", "мнс"], ["Научный сотрудник", "нс"], ["Старший научный сотрудник", "снс"], ["Ведущий научный сотрудник", "внс"], ["Доцент", "доцент"], ["Профессор", "профессор"], ["Член-корреспондент", "чл-корр"], ["Академик", "академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <%= f.input :uch_stepen, collection: [[t(:choose_value),""], [t(:st_doctor),"Доктор наук"], [t(:st_kandidat), "Кандидат наук"], [t(:st_magister), "Магистр"], [t(:st_special),"Специалист"], [t(:st_bachelor),"Бакалавр"], [t(:st_student),"Студент"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <h3><%= t(:work) %></h3>
       <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
+      <%= f.input :work_city, :input_html => { :class => 'form-control' } %>
       <%= f.input :work_position, :input_html => { :class => 'form-control' } %>
       <% if params[:locale]!='en' %>
         <h3><%= t(:additional_info) %></h3>
-        <%= f.input :antok_city, collection: [[t(:choose_value),""], [t(:moscow),"Москва"], [t(:voronezh), "Воронеж"], [t(:ekaterinburg), "Екатеринбург"], [t(:novosibirsk),"Новосибирск"], [t(:krasnoyarsk),"Красноярск"], [t(:far_east),"Дальний Восток"]], selected: @applic.antok_city, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+        <%= f.input :antok_city, collection: [[t(:choose_value),""], [t(:moscow),"Москва"], [t(:voronezh), "Воронеж"], [t(:ekaterinburg), "Екатеринбург"], [t(:novosibirsk),"Новосибирск"], [t(:krasnoyarsk),"Красноярск"], [t(:uz_sakhalinsk),"Южно-Сахалинск"], [t(:kaliningrad),"Калининград"]], selected: @applic.antok_city, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <% end %>
       <h3><%= t(:applicaion_info) %></h3>
       <%= f.input :science_interests, as: :text, :input_html => { :class => 'form-control' } %>
       <%= f.input :conf_topic, as: :text, :input_html => { :class => 'form-control' } %>
-      <%= f.input :conf_section, collection: [[t(:choose_value),""],[t(:physics_maths),"Физика, математика"], [t(:it_nanothechnologies), "Информационные (IT) и нанотехнологии"], [t(:power_electrical_engineering),"Энергетика, электротехника, машиностроение, механика"], [t(:chemistry_new_materials), "Химия, новые материалы и технологии их обработки"], [t(:biotechnology_biology), "Биотехнологии, биология, технологии живых систем, океанография"], [t(:geology_natural_resources), "Геология, природные ресурсы"], [t(:social_sciences), "Общественные науки"], [t(:aviation_space), "Авиационные и космические технологии"]], selected: @applic.conf_section, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :conf_section, collection: [[t(:choose_value),""],["Физика и математика","Физика и математика"], ["Информационные технологии и нанотехнологии", "Информационные технологии и нанотехнологии"], ["Энергетика и электротехника","Энергетика и электротехника"], ["Механика, машиностроение и приборостроение", "Механика, машиностроение и приборостроение"], ["Архитектура и строительство", "Архитектура и строительство"], ["Химия, новые материалы и технологии их обработки", "Химия, новые материалы и технологии их обработки"], ["Биотехнологии, биология, технологии живых систем и океанография", "Биотехнологии, биология, технологии живых систем и океанография"], ["Науки о земле и природные ресурсы", "Науки о земле и природные ресурсы"], ["Общественные науки","Общественные науки"]], selected: @applic.conf_section, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <%= f.input :conf_coauthors, as: :text, :input_html => { :class => 'form-control' } %>
       <%= f.input :participation_type, collection: [[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], selected: @applic.participation_type, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <% if current_user.is_antok_member %>
@@ -29,15 +32,6 @@
           <%= f.input :need_compensation, :as => :boolean %>
         </div>
         <br/>
-        <br/>
-        <div id="compensation_info_block">
-          <div class="alert alert-info">
-            <%= t(:step2_compensation_info) %>
-          </div>
-          <%= f.input :inn, :input_html => { :class => 'form-control' } %>
-          <%= f.input :snils, :input_html => { :class => 'form-control' } %>
-          <%= f.input :registration, :input_html => { :class => 'form-control' } %>
-        </div>
       <% end %>  
        <div class="alert alert-info">
            <%= t(:step2_warning) %>
