--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,26 @@
       <div class="container">
       <%= render 'layouts/nav2017' %>
       <div class="row banners">
-        <div class="col-md-2 banner">
-          <%= image_tag "banner1.png", class: "img-responsive" %>
+        <div class="col-md-2 hidden-md hidden-lg banner">
+          <%= image_tag "banner_aksts_kofst.jpg", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner1a.png", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner2a.gif", class: "img-responsive" %>
         </div>
         <div class="col-md-2 banner">
-          <%= image_tag "banner2.gif", class: "img-responsive" %>
+          <%= image_tag "banner3a.png", class: "img-responsive" %>
         </div>
         <div class="col-md-2 banner">
-          <%= image_tag "banner3.png", class: "img-responsive" %>
+          <%= image_tag "banner4a.png", class: "img-responsive" %>
         </div>
         <div class="col-md-2 banner">
-          <%= image_tag "banner4.png", class: "img-responsive" %>
+          <%= image_tag "banner5a.png", class: "img-responsive" %>
         </div>
-        <div class="col-md-2 banner">баннер ТИНБО</div>
         <div class="col-md-2 banner">
-          <%= image_tag "banner6.png", class: "img-responsive" %>
+          <%= image_tag "banner6a.png", class: "img-responsive" %>
         </div>
       </div>
       <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
