--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -10,10 +10,11 @@
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
       <h3><%= t(:education) %></h3>
-      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Младший научный сотрудник", "мнс"], ["Научный сотрудник", "нс"], ["Старший научный сотрудник", "снс"], ["Ведущий научный сотрудник", "внс"], ["Доцент", "доцент"], ["Профессор", "профессор"], ["Член-корреспондент", "чл-корр"], ["Академик", "академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], [t(:st_doctor),"Доктор наук"], [t(:st_kandidat), "Кандидат наук"], [t(:st_magister), "Магистр"], [t(:st_special),"Специалист"], [t(:st_bachelor),"Бакалавр"], [t(:st_student),"Студент"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "нет"], ["Младший научный сотрудник", "мнс"], ["Научный сотрудник", "нс"], ["Старший научный сотрудник", "снс"], ["Ведущий научный сотрудник", "внс"], ["Доцент", "доцент"], ["Профессор", "профессор"], ["Член-корреспондент", "чл-корр"], ["Академик", "академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <h3><%= t(:work) %></h3>
       <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
+      <%= f.input :work_country, as: :string, :input_html => { :class => 'form-control' } %>
       <%= f.input :work_city, :input_html => { :class => 'form-control' } %>
       <%= f.input :work_position, :input_html => { :class => 'form-control' } %>
       <% if params[:locale]!='en' %>
