mobile usability optimization and acad_position added

--- a/app/views/antok_members/index.html.erb
+++ b/app/views/antok_members/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Поиск своего АНТОК ID</h1>
+<h1 id="antokid">Поиск АНТОК ID</h1>
 <div class="alert alert-info">
   Поиск производится по точному совпадению. Введите полностью ФИО. Если результат поиска пустой, то попробуйте поиск по фамилии и имени без отчества. Если вы не смогли найти свой ID, то свяжитесь AKSTSRussia@gmail.com
 </div>
