--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -1,6 +1,7 @@
-<div class="row">
+<!-- NOT USED SEE new.html.erb and edit.html.erb -->
+<div id="form_anchor" class="row">
   <div class="col-md-6 applic-form">
-    <%= simple_form_for(@applic) do |f| %>
+    <%= simple_form_for(@applic, url: (applics_path + '#form_anchor')) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <h3><%= t(:personal_info) %></h3>
       <%= f.input :fio, :input_html => { :class => 'form-control' } %>
@@ -10,8 +11,9 @@
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
       <h3><%= t(:education) %></h3>
-      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "нет"], ["Младший научный сотрудник", "мнс"], ["Научный сотрудник", "нс"], ["Старший научный сотрудник", "снс"], ["Ведущий научный сотрудник", "внс"], ["Доцент", "доцент"], ["Профессор", "профессор"], ["Член-корреспондент", "чл-корр"], ["Академик", "академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Доцент", "доцент"], ["Профессор", "Профессор"], ["Член-корреспондент", "Член-корр."], ["Академик", "Академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "Нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :acad_position, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Лаборант","Лаборант"], ["Старший лаборант","Старший лаборант"], ["Ассистент","Ассистент"], ["Преподаватель", "Преподаватель"], ["Старший преподаватель", "Старший преподаватель"], ["Доцент","Доцент"], ["Профессор","Профессор"], ["Заведующий кафедрой","Заведующий кафедрой"], ["Декан","Декан"],["Проректор","Проректор"],["Ректор","Ректор"],["Младший научный сотрудник","Младший научный сотрудник"],["Научный сотрудник","Научный сотрудник"],["Старший научный сотрудник","Старший научный сотрудник"],["Ведущий научный сотрудник","Ведущий научный сотрудник"],["Главный научный сотрудник","Главный научный сотрудник"]], selected: @applic.acad_position, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <h3><%= t(:work) %></h3>
       <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
       <%= f.input :work_country, as: :string, :input_html => { :class => 'form-control' } %>
