--- a/app/views/applics/show.html.erb
+++ b/app/views/applics/show.html.erb
@@ -12,8 +12,9 @@
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
       <h3><%= t(:education) %></h3>
-      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "нет"], ["Младший научный сотрудник", "мнс"], ["Научный сотрудник", "нс"], ["Старший научный сотрудник", "снс"], ["Ведущий научный сотрудник", "внс"], ["Доцент", "доцент"], ["Профессор", "профессор"], ["Член-корреспондент", "чл-корр"], ["Академик", "академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Доцент", "доцент"], ["Профессор", "Профессор"], ["Член-корреспондент", "Член-корр."], ["Академик", "Академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "Нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
+      <%= f.input :acad_position, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Лаборант","Лаборант"], ["Старший лаборант","Старший лаборант"], ["Ассистент","Ассистент"], ["Преподаватель", "Преподаватель"], ["Старший преподаватель", "Старший преподаватель"], ["Доцент","Доцент"], ["Профессор","Профессор"], ["Заведующий кафедрой","Заведующий кафедрой"], ["Декан","Декан"],["Проректор","Проректор"],["Ректор","Ректор"],["Младший научный сотрудник","Младший научный сотрудник"],["Научный сотрудник","Научный сотрудник"],["Старший научный сотрудник","Старший научный сотрудник"],["Ведущий научный сотрудник","Ведущий научный сотрудник"],["Главный научный сотрудник","Главный научный сотрудник"]], selected: @applic.acad_position, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <h3><%= t(:work) %></h3>
       <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
       <%= f.input :work_country, as: :string, :input_html => { :class => 'form-control' } %>
@@ -29,13 +30,11 @@
       <%= f.input :conf_section, collection: [[t(:choose_value),""],["Физика и математика","Физика и математика"], ["Информационные технологии и нанотехнологии", "Информационные технологии и нанотехнологии"], ["Энергетика и электротехника","Энергетика и электротехника"], ["Механика, машиностроение и приборостроение", "Механика, машиностроение и приборостроение"], ["Архитектура и строительство", "Архитектура и строительство"], ["Химия, новые материалы и технологии их обработки", "Химия, новые материалы и технологии их обработки"], ["Биотехнологии, биология, технологии живых систем и океанография", "Биотехнологии, биология, технологии живых систем и океанография"], ["Науки о земле и природные ресурсы", "Науки о земле и природные ресурсы"], ["Общественные науки","Общественные науки"]], selected: @applic.conf_section, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
       <%= f.input :conf_coauthors, as: :text, :input_html => { :class => 'form-control' } %>
       <%= f.input :participation_type, collection: [[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], selected: @applic.participation_type, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <% if current_user.is_antok_member %>
-        <h3><%= t(:compensation_info) %></h3>
-        <div class="form_checkbox">
-          <%= f.input :need_compensation, :as => :boolean %>
-        </div>
-        <br/>
-      <% end %>
+      <h3><%= t(:compensation_info) %></h3>
+      <div class="form_checkbox">
+        <%= f.input :need_compensation, :as => :boolean %>
+      </div>
+      <br/>
     <% end %>
   </div>
 </div>
