--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t :sign_up_registration %></h2>
+<h2 id="new_registration"><%= t :sign_up_registration %></h2>
 <div class="row">
   <div class="col-md-6">
     <div class="alert alert-info">
@@ -20,7 +20,7 @@
         <div id="antok_id_block">
           <%= f.input :antok_id, :input_html => { :class => 'form-control' } %>
           <div class="alert alert-info">
-            <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id" target="_blank">http://my.aksts.ru/antok_id</a></p>
+            <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id#antokid" target="_blank">http://my.aksts.ru/antok_id</a></p>
           </div>
         </div>
       <% end %>
