eng inform letter

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,6 +27,9 @@
       <% end %>
       <div class="attach">
         <div><%= link_to "Скачать информационное письмо (Рус.)", '/docs/Inform1_STconference2.pdf' %></div>
+      </div>
+      <div class="attach">
+        <div><%= link_to "Download Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG.pdf' %></div>
       </div> 
     </div> 
   </div>
