--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,8 +26,8 @@
         </div>
       <% end %>
       <div class="attach">
-        <div><%= link_to "Скачать информационное письмо (Рус.)", '/docs/Inform1_STconference2.pdf' %></div>
-        <div><%= link_to "Download Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG.pdf' %></div>
+        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_STconference2.pdf' %></div>
+        <div><%= link_to "Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG.pdf' %></div>
       </div> 
     </div> 
   </div>
